--- a/index.html
+++ b/index.html
@@ -1,12 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="ltr" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mid term exam exercice</title>
+    <title>Renaissance Tour</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header>
+        <h1 class="main-title">Renais
+            sance</h1>
+    </header>
+
+    <section>
+        <figure class="left sticky">
+            <img src="image/Beyonce-2.jpeg" alt="Beyoncé in glitter on a horse">
+        </figure>
+    </section>
+
+    <section class="darkerbg">
+        <figure class="left sticky">
+            <h1>Choose 
+                your
+                songs
+            </h1>
+        </figure>
+        <article>
+            <nav class="nav">
+                <a href="#opening">Energy</a>
+                <a href="virgo.html">Virgo's groove</a>
+                <a href="thique.html">Thique</a>
+                <a href="heated.html">Heated</a>
+            </nav>
+        </article>
+    </section>
+
+    <section>
+        <figure class="left sticky">
+            <h1>Energy</h1>
+        </figure>
+        <article class="right">
+            <h2 id="opening">On stage rockin', I'm stir crazy
+                Coco flow like 1980s
+                Come, let's tell a drop lazy
+                None of that maybe energy (nah)
+                Energy
+                Energy</h2>
+            <p>Just vibe
+                Votin' out forty-five
+                Don't get outta line (yeah)
+                Ooh, ooh, ooh, ooh
+                Pick a side
+                Only double lines we cross is dollar signs (yeah)
+                Ooh, ooh, ooh, ooh (hold up)
+                Wait, I hear you just got paid
+                Make it rain energy
+                She more Cancun, he more St. Tropez</p>
+            <p>Big wave in the room, the crowd gon' move
+                Look around everybody on mute
+                Look around it's me and my crew
+                Big energy</p>
+            <p>He was on stop mode, got froze
+                Froze front page Vogue, no pose
+                Chat too much, full clip unload
+                That's that Kodak energy
+                Energy
+                Energy
+                Energy
+                Yeah, yeah</p>
+            <p>Gold links, raw denim
+                You know that we do it grande
+                You know that I'm gon' be extra
+                When that camera go pop-pop-pop-pop-pop-pop
+                Keep 'em waitin' like dot-dot-dot-dot-dot-dot
+                Ooh, la, la, la
+                That's the way them boys sound when I walk through the block-block-block
+                Then I Uzi that doozy, shot-shot-shot</p>
+            <p>We was chillin', mindin' our business
+                Poppin' our pain and champagne through the ceiling
+                Sippin' it up, flickin' it up
+                All this good energy got you all in your feelings, feelings
+                I'm crazy, I'm swearin'
+                I'm darin', your man starin'
+                I just entered the country with Derringers
+                'Cause them Karens just turned into terrorists</p>
+            <p>You was on stop mode, got froze
+                Froze front page Vogue, no pose
+                Chat too much, full clip unload
+                That's that Kodak energy (go, let's go, let's go, let's go)
+                Energy
+                Energy (go, let's go, let's go, let's go)
+                Energy
+                Yeah, yeah</p>
+         </article>
+    </section>
+
+    <footer>
+        <div>Beyoncé ©</div>
+        <div>Lorem ipsum dolor sit amet.</div>
+        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi?</div>
+        <div>Dolor quidem autem sequi, animi non rerum. Rem, repellat?</div>
+    </footer>
 </body>
+
 </html>
