--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Renaissance Tour</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="animation.css">
 </head>
 
 <body>
@@ -16,11 +17,11 @@
 
     <section>
         <figure class="left sticky">
-            <img src="image/Beyonce-2.jpeg" alt="Beyoncé in glitter on a horse">
+            <img src="image/Beyonce-2.jpeg" alt="a collage of Beyoncé in the middle she is in glitter on a fake sequin horse">
         </figure>
     </section>
 
-    <section class="darkerbg">
+    <section class="navbackground">
         <figure class="left sticky">
             <h1>Choose 
                 your
@@ -39,10 +40,10 @@
 
     <section>
         <figure class="left sticky">
-            <h1>Energy</h1>
+            <h1 id="opening">Energy</h1>
         </figure>
         <article class="right">
-            <h2 id="opening">On stage rockin', I'm stir crazy
+            <h2 class="energy">On stage rockin', I'm stir crazy
                 Coco flow like 1980s
                 Come, let's tell a drop lazy
                 None of that maybe energy (nah)
