--- a/thique.html
+++ b/thique.html
@@ -7,25 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Renaissance Tour</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="animation.css">
 </head>
 
 <body>
     <header>
-        <h1 class="main-title"> Thique</h1>
+        <h1 class="main-title-thique"> Thique</h1>
     </header>
 
     <section>
         <figure class="left sticky">
-            <img src="image/Thique.avif" alt="Beyoncé dressed in black and white with arms open">
+            <img src="image/Thique.avif" alt="Beyoncé dressed in black with fluffly sleeves and wering a black and big hat">
         </figure>
     </section>
 
     <section>
         <figure class="left sticky">
-            <h1>Thique</h1>
+            <h1 class="thique">Thique</h1>
         </figure>
         <article class="right">
-            <h2>Ass gettin' bigger
+            <h2 class="thique">Ass gettin' bigger
                 Racks gettin' bigger
                 Cash gettin' larger
                 He thought he was loving me good, I told him, "Go harder"
@@ -106,7 +107,7 @@
         </article>
     </section>
 
-    <section class="darkerbg">
+    <section class="navbackground">
         <figure class="left sticky">
             <h1>Choose 
                 your
