--- a/virgo.html
+++ b/virgo.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Renaissance Tour</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="animation.css">
 </head>
 
 <body>
     <header>
-        <h1 class="main-title">Virgo's
+        <h1 class="main-title-virgo" >Virgo's
             groove</h1>
     </header>
 
@@ -23,11 +24,11 @@
 
     <section>
         <figure class="left sticky">
-            <h1>Virgo's
+            <h1 class="virgo">Virgo's
                 groove</h1>
         </figure>
         <article class="right">
-            <h2>Baby, come over
+            <h2 class="virgo">Baby, come over
                 Baby, come over
                 Baby, come over (baby, come over)
                 Come be alone with me tonight
@@ -130,7 +131,7 @@
         </article>
     </section>
 
-    <section class="darkerbg">
+    <section class="navbackground">
         <figure class="left sticky">
             <h1>Choose 
                 your
