--- a/heated.html
+++ b/heated.html
@@ -7,25 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Renaissance Tour</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="animation.css">
 </head>
 
 <body>
     <header>
-        <h1 class="main-title">Heated</h1>
+        <h1 class="main-title-heated">Heated</h1>
     </header>
 
     <section>
         <figure class="left sticky">
-            <img src="image/heated.avif" alt="Beyoncé in glitter on a horse">
+            <img src="image/heated.avif" alt="Beyoncé dressed in black and white with arms open">
         </figure>
     </section>
 
     <section>
         <figure class="left sticky">
-            <h1>Heated</h1>
+            <h1 class="heated">Heated</h1>
         </figure>
         <article class="right">
-            <h2>Got a lot of bands, got a lot of Ivy on me
+            <h2 class="heated">Got a lot of bands, got a lot of Ivy on me
                 I gotta fan myself off, I gotta fan myself off
                 I gotta cool down (heated, like Coco Chanel, put me up in jail)
                 I gotta cool it down (heated, like stolen Chanel, put me up in jail)</h2>
@@ -105,7 +106,7 @@
         </article>
     </section>
 
-    <section class="darkerbg">
+    <section class="navbackground">
         <figure class="left sticky">
             <h1>Choose
                 your
